# FPS_Game

./: Cargo.toml
src/: main.rs
src/player/: components.rs  mod.rs  systems.rs
src/world/: components.rs  mod.rs  systems.rs
