[package]
name = "fps_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remember to remove "dynamic_linking" before releasing your game!
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
